syntax="proto3";

option go_package="./pb";
import "google/protobuf/timestamp.proto";

package proto;

message Event {
    int32 event_id = 1;
    string name = 2;
    google.protobuf.Timestamp start = 3;
    google.protobuf.Timestamp end = 4;
    string location = 5;
    google.protobuf.Timestamp deadline = 6;
    string cover = 7;
    string desc = 8;
}

message EventRegistration {
    int32 event_id = 1;
    int32 user_id = 2;
    string first_name = 3;
    string last_name = 4;
    string email = 5;
    int32 phone_number = 6;
    string academic_group = 7;
    string team_members = 8;
    string shirt_size = 9;
    string food_pref = 10;
    string motivation = 11;
    string questions = 12;
    string feedback = 13;
}

message CreateEventRequest {
    Event event = 1;
}

message CreateEventResponse {
    string message = 1;
    int32 event_id = 2;
}

message EditEventRequest {
    Event event = 1;
}

message EditEventResponse {
    string message = 1;
}

message DeleteEventRequest {
    int32 event_id = 1;
}

message DeleteEventResponse {
    string message = 2;
}

message GetEventRequest {
    int32 event_id = 1;
}

message GetEventResponse {
    Event event = 1;
}

message GetEventsResponse {
    repeated Event events = 1;
}

message RegisterForEventRequest {
    EventRegistration registration = 1;
}

message RegisterForEventResponse {
    string message = 1;
}

message GetEventRegistrationsRequest {
    int32 event_id = 1;
}

message GetEventRegistrationsResponse {
    repeated EventRegistration registrations = 1;
}

message GetEventUserRegistrationRequest {
    int32 event_id = 1;
    int32 user_id = 2;
}

message GetEventUserRegistrationResponse {
    EventRegistration registration = 1;
}

message GetUserEventsRequest {
    int32 user_id = 1;
}

message GetUserEventsResponse {
    repeated Event events = 1;
}

message EditRegistrationRequest {
    EventRegistration registration = 1;
}

message EditRegistrationResponse {
    string message = 1;
}